[package]
name = "wib"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
nix = { version = "0.29.0", features = ["fs"] }
signal-hook = "0.3.17"
wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features = ["unstable", "client"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
